# stations

./: .coveragerc  .envrc  .gitignore  .isort.cfg  .pre-commit-config.yaml  404.html  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  Procfile  README.md  app.py  index.html  mkdocs.yaml  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup.sh  sitemap.xml  tox.ini  xxx
_build/doctrees/: authors.doctree  changelog.doctree  index.doctree  license.doctree
_build/doctrees/api/: modules.doctree  stations.doctree  stations.helper.doctree  stations.ui.doctree
_build/html/: authors.html  changelog.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/html/_modules/: index.html
_build/html/_sources/: index.md.txt
_build/html/_sources/api/: modules.rst.txt  stations.ui.rst.txt
_build/html/api/: modules.html  stations.helper.html  stations.html  stations.ui.html
api/: stations.helper.rst  stations.rst
docs/: conf.py  index.md  requirements.txt  selpapers.bib
search/: search_index.json
src/models/: preprocess_dwd.py  train.py
src/models/conf/: config.yaml
src/models/conf/dataset/: fake.yaml  fashionmnist.yaml  tereno.yaml
src/models/conf/optimizer/: adam.yaml  (+1 more)
src/models/models/: cdcgan.py  simplecgan.py
src/stations/: __init__.py
src/stations/helper/: custom_types.py  spatial.py
src/stations/ui/: SessionState.py  ifu_data.py  mainpage_controls.py  mainpage_map.py  metrics.py
src/utils/io/: imaging.py  logging.py  pathlib_extensions.py
tests/: conftest.py  test_stations.py
(+5 files in other folders)
